# rhiza-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: hooks_release.yml  rhiza_pre-commit.yml
.rhiza/: .cfg.toml  history  template-bundles.yml  template.yml
.rhiza/make.d/: 08-docs.mk
.rhiza/tests/integration/: test_book_targets.py
.rhiza/tests/structure/: test_project_layout.py
docs/: CUSTOMIZATION.md
rhiza_hooks/: __init__.py  check_makefile_targets.py  check_python_version.py  check_rhiza_config.py  check_template_bundles.py  check_workflow_names.py  update_readme_help.py
src/rhiza_hooks/: check_makefile_targets.py  check_python_version.py  check_rhiza_config.py  check_template_bundles.py  update_readme_help.py
tests/: __init__.py  test_check_makefile_targets.py  test_check_python_version.py  test_check_rhiza_config.py  test_check_template_bundles.py  test_check_workflow_names.py  test_scripts.py  test_update_readme_help.py
